# materialcard

./: .gitignore  README.md  context.json  materialcard.spec  out.docx  pyproject.toml  run_materialcard.py
.github/workflows/: build-windows-exe.yml  ci.yml
scripts/: build_exe.ps1
src/materialcard/: __init__.py  __main__.py  builder.py  cli.py  context_io.py  exceptions.py  models.py  parse_regex.py  pdf_text.py  renderer_docx.py  services.py
templates/approvals/polnoc/: TEMPATE_HERE.md  TEMPLATE_HERE.docx
templates/approvals/wroclaw/: TEMPATE_HERE.md  TEMPLATE_HERE.docx  TEMPLATE_HERE.md  ~$MPLATE_HERE.docx
tests/: conftest.py  test_builder.py  test_cli_helper.py  test_cli_smoke.py  test_integration_docx.py  test_parse_regex.py  test_parse_regex_fixtures.py  test_parse_regex_real_fixtures.py  test_pdf_text.py  test_renderer_docx.py  test_services.py
tests/fixtures/parser/: description_fallback.txt  labeled_happy_path.txt  labeled_wrapped_value.txt  material_type_fallback.txt  missing_material_type.txt
tests/fixtures/parser_real/: baumit.txt  dachpodloga.txt  kafelki.txt  promatecth.txt
